--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/county_data",
-      "methods": ["POST"],
-      "dest": "/api/county_data.py"
+      "src": "/(.*)",
+      "dest": "api/county_data.py"
     }
   ]
 }
