--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/",
+      "dest": "api/county_data.py"
+    },
+    {
       "src": "/county_data",
       "dest": "api/county_data.py"
     },
